# TW3MM

./: .gitignore  Pipfile.backup  Readme.md  main.py  pyproject.toml  setup.py  ts.py
requirements/: dev.txt  main.txt
res/: qt.conf
src/configuration/: config.py
src/core/: installer.py  model.py
src/domain/: mod.py
src/globals/: constants.py  data.py
src/gui/: alerts.py  details_dialog.py  main_widget.py  main_window.py  themes.py  tree_widget.py
src/util/: util.py
