[project]
name = "TW3MM"
version = "0.9.3-beta.2"
description = "Default template for PDM package"
authors = [
    {name = "George Burduli", email = "burduli01@pm.me"},
]
dependencies = [
    "fasteners",
    "pyside6",
    "watchdog",
    "charset-normalizer",
    "pywin32; sys_platform == 'win32'",
    "colorama; sys_platform == 'win32'",
    "patool; sys_platform != 'win32'",
    "easyprocess; sys_platform != 'win32'",
    "patchelf; sys_platform != 'win32'",
]
readme = "README.md"
license = {text = "BSD-2-Clause"}
requires-python = ">=3.9,<3.13"


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pylint",
    "mypy",
    "cx-freeze",
    "autopep8",
    "lief",
]

[tool.pdm.scripts]
start = "python -m main"
build-win = "python setup.py build_exe"